src/styles/global.css
:root {
    --clr-primary-50: #F7D7FF;
    --clr-primary-100: #F1D2FF;
    --clr-primary-200: #EBCCFF;
    --clr-primary-300: #DCBEFF;
    --clr-primary-400: #B69BFF;
    --clr-primary-500: #967EFF;
    --clr-primary-600: #6756DE;
    --clr-primary-700: #5043BA;
    --clr-primary-800: #383971;
    --clr-primary-900: #27294A;

    --clr-neutral-50: #F7F5F3;
    --clr-neutral-100: #DADCDD;
    --clr-neutral-200: #BBC1C5;
    --clr-neutral-300: #9BA6AE;
    --clr-neutral-400: #86949F;
    --clr-neutral-500: #6E808D;
    --clr-neutral-600: #61717C;
    --clr-neutral-700: #505D65;
    --clr-neutral-800: #41494F;
    --clr-neutral-900: #303438;
    --clr-neutral-950: #161718;


    --clr-accent-50: #FDFEFF;
    --clr-accent-100: #F8F4DC;
    --clr-accent-200: #F3E9AC;
    --clr-accent-300: #F0E17C;
    --clr-accent-400: #EED75E;
    --clr-accent-500: #EED04F;
    --clr-accent-600: #EEC447;
    --clr-accent-700: #EAB23F;
    --clr-accent-800: #ECA538;
    --clr-accent-900: #EA8827;

    --ff-primary: 'Outfit', sans-serif ;
    --ff-body: var(--ff-primary);
    --ff-accent: var(--ff-primary);

    --fw-regular: 300;
    --fw-medium: 400;
    --fw-semibold: 500;
    --fw-bold: 600;
    --fw-black: 900;

    --fs-300: 1rem;
    --fs-400: 1.25rem;
    --fs-500: 1.5rem;
    --fs-500: 1.75rem;
    --fs-600: 2.25rem
    --fs-700: 3rem;
    --fs-800: 4rem
    --fs-900: 4.5rem;

}

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default margin and padding */
* {
  margin: 0;
  padding: 0;
  font: 'Outfit', sans-serif;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'],
ol[role='list'] {
  list-style: none;
}

/* Set core root defaults */
html:focus-within {
  scroll-behavior: smooth;
}

html,
body {
    height: 100%;
    width: 100%;
    font-family: var(ff-primary);
    overflow-x:hidden;
}

/* Set core body defaults */
body {
  text-rendering: optimizeSpeed;
  line-height: 1.5;
  background-color: var(--clr-neutral-50);
}

main {
    padding: 2em 3em 2em 3em;
    max-width: 200em;
    margin: auto;
}

/* a elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
}

.lock-scroll {
  overflow: hidden;
}

/* Make images easier to work with */
img,
picture,
svg {
  max-width: 100%;
  display: block;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
  html:focus-within {
   scroll-behavior: auto;
  }
  
  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

@media screen and (max-width: 50em) {
    main {
        padding: 1.5em;
    }
}

.lockScroll {
  position: fixed;
  overflow: hidden;
}

